# ME_595

./: .gitignore  README.md  pyproject.toml
eng-docs/: project_plan.md  project_tracker.md
notebooks/: README.md  analysis.ipynb  autodiff-policy.ipynb  full-order-simulation.ipynb  inverted_double_pendulum_intro.ipynb  lqr-controller.ipynb  ppo-poly.ipynb  se3-forward-kinematics.ipynb  se3-rl-lqr-comparison.ipynb  simulation.ipynb  sindy-dagger.ipynb  sindy-feature-engineering.ipynb  sindy-hypersearch.ipynb  trackA_sindy_dynamics.ipynb  trackA_sindy_lqr_transfer.ipynb  trackA_sindy_ppo_checkpoint_sweep.ipynb  trackA_sindy_trig_ppo_checkpoint_sweep.ipynb  trackB_sindy_rl_policy.ipynb
notebooks/Exploratory/: autodiff-policy.ipynb  koopman-deep.ipynb  koopman-dynamics.ipynb  lqr-controller.ipynb  physics-informed-library.ipynb  ppo-poly.ipynb  se3-forward-kinematics.ipynb  se3-rl-lqr-comparison.ipynb  simulation.ipynb  sindy-dagger.ipynb  sindy-feature-engineering.ipynb  sindy-hypersearch.ipynb  swing-up-v2.ipynb  trackA_sindy_dynamics.ipynb  trackA_sindy_lqr_transfer.ipynb  trackA_sindy_ppo_checkpoint_sweep.ipynb  trackA_sindy_trig_ppo_checkpoint_sweep.ipynb
prelim-report/: bibliography.md  outline.md  pandoc-header.tex  prelim-report-figures.ipynb  prelim-report-v2.md  prelim-report.md
presentation/: lit-review-annotated-refs.md  presentation-overview.md  slides-final.html  slides-final.md  slides.html  slides.md
references/: opinion.md
report/: assignment-details.md  build.sh  final-report.md  pandoc-header.tex  refs.bib  report-alt.md  report.md
src/: plotting_utils.py
