[project]
name = "me-595"
version = "0.1.0"
description = "Control RL project environment for ME 595."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[mujoco]>=1.1",
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pysindy>=1.7",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
